--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
+<header>
+  <img src="../logo.ico" alt="logo">
+  <a (click)="back()">Back</a>
+  <a [routerLink]="['/dashboard']">Dashboard</a>
+  <a [routerLink]="['/messages']">Messages</a>
+</header>
+
 <router-outlet></router-outlet>
