--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,24 @@
-<header>
-  <img src="../logo.ico" alt="logo">
-  <a (click)="back()">Back</a>
-  <a [routerLink]="['/dashboard']">Dashboard</a>
-  <a [routerLink]="['/messages']">Messages</a>
+<header style="background-color: #2c2c2c; color: white; height: 60px; padding: 0 20px;">
+  <ul class="list-group flex-row gap-lg-5 list-unstyled align-items-center">
+    <li>
+      <a [routerLink]="['/files']">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="white" width="60" height="60" version="1.0" viewBox="0 0 256 255">
+          <path d="M113.9 46.3c-2.6 4-13.6 20.7-24.5 37.2-10.9 16.5-19.9 30.5-19.9 31 0 .6-3.9 6.9-8.6 14-9.9 15.1-12.9 20-12.9 20.9 0 .3 6.4.5 14.3.5 7.8-.1 12.7-.4 10.8-.8l-3.3-.6 8-15.5c8.9-17.1 8.3-16.6 19.7-17.6 12.5-1.1 11 .1 21.9-16.9 9.6-14.9 10-15.4 11.5-13.3 2.7 3.9 26.9 43.3 26.7 43.5-.1.1-4.1.3-8.9.4-8.3.3-11.8 1.2-6 1.7 2.5.2 4.2 1.6 4.3 3.5 0 .5-.4.5-1 .2-.5-.3-1 .1-1 .9s-.5 2.7-1.2 4.3c-.6 1.5-1 3.4-.9 4.1.1.7-.8 1.6-2.1 2.1-2.2.9-2.2.9-.3 1.7 1.2.6-6.1 1.1-19 1.4l-21 .6 23.8.2c15 .1 23.7.6 23.7 1.2s7.7 1 21.1 1c11.6 0 20.9-.3 20.7-.8-.6-1.2-7.7-12.4-21.7-34-15.8-24.5-39.2-61.9-44.7-71.5-2.1-3.7-4.1-6.7-4.4-6.7-.3.1-2.6 3.3-5.1 7.3z"/><path d="M135.3 129.7c.9.2 2.3.2 3 0 .6-.3-.1-.5-1.8-.5-1.6 0-2.2.2-1.2.5zM201.5 130.2c.8 2-1.2 8.8-2.6 8.8-.5 0-.9.7-.9 1.5s-.4 1.5-1 1.5c-1.3 0-1.3 2.3.1 5.4.8 1.8 2.2 2.7 4.9 3.1 4.9.8 11-.3 11-2.1 0-1.4-3.8-8.2-8.4-14.9-3.3-4.8-3.9-5.4-3.1-3.3zM155 171.4c0 2.8-.5 4.6-1.4 4.9-.7.3-1.6 1.5-1.9 2.6-.4 1.6 0 2.1 1.4 2.1 1.7 0 1.9.8 1.9 8.6 0 8.1.1 8.7 2.9 11.5 3.4 3.4 9.1 4.1 9 1.1 0-1.9-1.7-6.2-1.8-4.8-.1.5-.8.3-1.6-.4-1.1-.9-1.5-3.3-1.5-9.1V180h3c2.3 0 3-.5 3-1.9 0-1.5-.8-2.1-3.2-2.3-3.1-.3-3.3-.6-3.6-4.6-.3-3.9-.5-4.2-3.3-4.2s-2.9.2-2.9 4.4zM60.9 176.3c-12.8 8.6-9.3 26.4 5.7 29.3 3.5.6 10.9-2.1 13.2-4.9 1.1-1.3 1-1.8-1.2-3.2-2.4-1.6-2.8-1.6-6.1-.1-8.3 4-15.4-3.9-11-12.3.8-1.6 2.2-3.1 3-3.5 2.6-.9 7.4-.7 9.7.5 1.6.9 2.4.7 3.9-1 2.5-2.7 1.5-4.8-2.9-6.1-5.9-1.6-10.6-1.2-14.3 1.3zM94.8 175.2c-2.3.6-5.1 2.5-7.3 4.9-3.1 3.4-3.5 4.5-3.5 9.2 0 6.2 2.4 10.8 7.2 13.7 4 2.4 11.4 2.6 14.6.4 2.2-1.5 2.4-1.5 3.6.1 1.6 2.3 7.1 1.7 7-.8 0-.9-.1-7.6-.2-14.7l-.2-13h-2.9c-1.6 0-3.1.5-3.3 1.2-.3.9-1.1.9-3.4.1-4.7-1.8-7.7-2.1-11.6-1.1zm11.3 8.7c2 2 2.9 3.9 2.9 6.1 0 4-4.7 9-8.5 9-5.6 0-9.4-3.6-9.4-9 0-8.3 9.1-12 15-6.1zM131.7 175c-3.7 1.1-5.7 2.9-6.9 5.9-2.1 5.5 1.7 9.3 10.5 10.6 5.4.8 6.2 1.6 4.7 4.5-1.2 2.3-3 2.5-7.6.8-2.6-.9-3.9-.9-6 .1l-2.7 1.2 2.3 2.5c5 5.2 13.6 5.1 19.2-.3 5.9-5.7 1.9-13.4-7.7-14.8-5.5-.9-7.6-2.9-4.5-4.5 2-1.1 6-.5 7 1 .3.5 1.6-.1 2.9-1.1 2.4-2 2.4-2 .5-3.9-2.3-2.2-7.9-3.2-11.7-2zM178.3 177c-6.6 4-8.9 14.6-4.5 20.8 5.3 7.4 14.4 9.4 21.4 4.6 6.5-4.6 4-7.6-4-4.8-2.5.8-5.6 1.3-6.9.9-2.6-.6-5.8-4.9-4.8-6.5.4-.6 5-1 11.6-1 10.3 0 10.9-.1 10.9-2 0-3.2-2.5-7.4-6.5-10.9-3-2.6-4.4-3.1-8.8-3.1-3.4 0-6.3.7-8.4 2zm14.1 6.1c1.4 1.1 2.4 2.5 2.1 3-.9 1.4-14.5 1.1-14.5-.3 0-4.6 7.8-6.3 12.4-2.7z"/>
+        </svg>
+      </a>
+    </li>
+<!--    <li>-->
+<!--      <a (click)="back()">Back</a>-->
+<!--    </li>-->
+    <li>
+      <a [routerLink]="['/dashboard']">Dashboard</a>
+
+    </li>
+    <li>
+      <a [routerLink]="['/messages']">Messages</a>
+
+    </li>
+  </ul>
 </header>
 
 <router-outlet></router-outlet>
