--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,1 +1,12 @@
-<canvas #canvas style="border: 1px solid black" width="1500" height="1500"></canvas>
+
+<div class="d-flex flex-row" style="border-top: 1px solid #5a5959; ">
+  <div style="width: 240px; height: calc(100vh - 60px); background-color: #2c2c2c">
+    <ul class="elems-list">
+      <app-draw-element *ngFor="let elemName of objects" [elementName]="elemName"></app-draw-element>
+    </ul>
+  </div>
+  <div >
+    <canvas #canvas style="border: 1px solid black; width: 100%; height: 100%"></canvas>
+  </div>
+<!--  <div  -->
+</div>
